--- a/KgysProjectIdentity.Web/Views/IpPhone/CreateExcel.cshtml
+++ b/KgysProjectIdentity.Web/Views/IpPhone/CreateExcel.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
     Layout = null;
     int i = 0;
+    string durum;
 }
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <title>Kazalı Noktalar @DateTime.Now.ToString()</title>
+    <title>@ViewBag.DistrictName KGYS Durumu @DateTime.Now.ToString()</title>
     <link rel="shortcut icon" type="image/x-icon" href="~/images/cop.ico" /> @*site iconu değiştirir*@
     <link rel="stylesheet" href="~/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/dataTables.bootstrap5.min.css">
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="~/KgysProjectIdentity.Web.styles.css" asp-append-version="true" />
 </head>
 <body class="container-responsive">
-    @inject GetProject project
     <div class="row">
         <div class="container-fluid">
             <header>
@@ -45,91 +44,66 @@
             </header>
         </div>
     </div>
-
     <table id="example" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
         <thead>
             <tr class="table-light">
                 <th>Sıra No</th>
-                <th>Kazalı Nokta Adı</th>
-                <th>KGYS / PTS</th>
-                <th>Kaza İlçesi</th>
-                <th>Kaza Tarihi</th>
-                <th>Kaza Bilgisi</th>
-                <th>Kaza EBYS No</th>
-                <th>Alkol Testi</th>
-                <th>Kaza Tutanağı</th>
-                <th>Sigorta Şirketi</th>
-                <th>Sigorta Poliçe No</th>
-                <th>Kasko Şirketi</th>
-                <th>Kasko Poliçe No</th>
-                <th>Hasar Kayıt Tarihi</th>
-                <th>Hasar Kayıt No</th>
-                <th>Hasar Kayıt Durumu</th>
-                <th>Atanan Expertiz Şirketi</th>
-                <th>Expertiz Telefon No</th>
-                <th>Expertiz E-mail</th>
-                <th>Belgeler Expertize Gönderildi Mi? </th>
-                <th>Tahmini Onarım Bedeli</th>
-                <th>Açıklama</th>
-                <th>Ödeme Durumu</th>
-                <th>Ödenen Miktar</th>
-                <th>Onarımı Yapan Şirket</th>
-                <th>Onarım Tamamlanma Tarihi</th>
-                <th>İşin Durumu</th>
-                <th>Güncelleme Tarihi</th>
-                <th>İlgilenen Personel</th>
+                <th>Bina Adı</th>
+                <th>Birim Adı</th>
+                <th>Santral Var Mı?</th>
+                <th>Santral Markası</th>
+                <th>Poe Switch Var Mı?</th>
+                <th>Altyapı Uygun Mu?</th>
+                <th>Telefon Sayısı</th>
             </tr>
         </thead>
         <tbody>
-
-            @foreach (var item in ViewBag.AccidentKgys)
+            @foreach (var item in ViewBag.IpPhone)
             {
                 i++;
-
                 <tr>
                     <th scope="row">@i</th>
-                    <td>@item.AccidentKgysName</td>
-                    <td>@item.AccidenKgysType</td>
-                    <td>@item.AccidentKgysDistrict</td>
-                    <td>@item.AccidentDate</td>
-                    <td>@item.AccidentInfo</td>
-                    <td>@item.AccidentEbysNo</td>
-                    <td>@item.AlcoholTest</td>
-                    <td>@item.AccidentReport</td>
-                    <td>@item.AccidentInsuranceName</td>
-                    <td>@item.AccidentPolicyNo </td>
-                    <td>@item.AccidentComplementInsuranceName</td>
-                    <td>@item.AccidentComplementPolicyNo</td>
+                    <td>@item.Campus</td>
+                    <td>@item.Unit</td>
                     <td>
-                        @if (item.AccidentRegistrationDate != null)
+                        @if (item.Central == true)
                         {
-                            @item.AccidentRegistrationDate.ToString("dd/MM/yyyy")
+                            durum = "Uygun";
                         }
+                        else
+                        {
+                            durum = "Uygun Değil";
+                        }
+                        @durum
                     </td>
-                    <td>@item.AccidentRegistrationNo </td>
-                    <td>@item.AccidentRegistrationStatus</td>
-                    <td>@item.AccidentExpertiseCompany</td>
-                    <td>@item.AccidentExpertiseTelephone</td>
-                    <td>@item.AccidentExpertiseEmail</td>
-                    <td>@item.AccidentExpertiseEmailSend</td>
-                    <td>@item.AccidentDamagePrice</td>
-                    <td>@item.Explanation</td>
-                    <td>@item.PriceStatus</td>
-                    <td>@item.AmountPaid</td>
-                    <td>@item.RepairCompany</td>
+                    <td>@item.CentralBrand</td>
                     <td>
-                        @if (item.RepairFinishDate != null)
+                        @if (item.PoeSwitch == true)
                         {
-                            @item.RepairFinishDate.ToString("dd/MM/yyyy")
+                            durum = "Var";
                         }
+                        else
+                        {
+                            durum = "Yok";
+                        }
+                        @durum
                     </td>
-                    <td>@item.Status</td>
-                    <td>@item.UpdateDate</td>
-                    <td>@item.UpdateUser</td>
-                    
-                </tr>
+                    <td>
+                        @if (item.CableIsTrue == true)
+                        {
+                            durum = "Uygun";
+                        }
+                        else
+                        {
+                            durum = "Uygun Değil";
+                        }
+                        @durum
+                    </td>
+                    <td>@item.PhonePieces</td>
 
+                </tr>
             }
+
         </tbody>
     </table>
 
