--- a/KgysProjectIdentity.Web/Views/Shared/_navBarDropBox.cshtml
+++ b/KgysProjectIdentity.Web/Views/Shared/_navBarDropBox.cshtml
@@ -84,7 +84,8 @@
                     <li>
                         <a class="nav-link text-light" href="#">  Proje İşlemleri &raquo; </a>
                         <ul class="submenu dropdown-menu" style="background-color:black">
-                            <li><a class="nav-link text-light " asp-area="" asp-controller="Projects" asp-action="ProjectAdd">Proje Ekleme</a></li>
+                            <li><a class="nav-link text-light " asp-area="" asp-controller="Projects" asp-action="ProjectAdd">KGYS Proje Ekleme</a></li>
+                            <li><a class="nav-link text-light " asp-area="" asp-controller="IpPhone" asp-action="Project">IP Telefon Projesi Ekleme</a></li>
                         </ul>
                     </li>
                 }
