--- a/KgysProjectIdentity.Web/Views/IpPhone/Update.cshtml
+++ b/KgysProjectIdentity.Web/Views/IpPhone/Update.cshtml
@@ -25,7 +25,7 @@
         <div class="form-check">
             <input class="form-check-input" type="checkbox" asp-for="Central" id="flexCheckDefault">
             <label class="form-check-label" for="flexCheckDefault">
-                Uygun Santral Var Mı?
+                Santral Uygun Mu?
             </label>
         </div>
         <div class="mb-2">
@@ -42,7 +42,7 @@
         <div class="form-check">
             <input class="form-check-input" type="checkbox" asp-for="CableIsTrue" id="flexCheckDefault2">
             <label class="form-check-label" for="flexCheckDefault2">
-                Altyapı Uygun Var Mu?
+                Altyapı Uygun Mu?
             </label>
         </div>
         <div class="mb-2">
