--- a/KgysProjectIdentity.Web/Views/Cctv/ProjectFullDetail.cshtml
+++ b/KgysProjectIdentity.Web/Views/Cctv/ProjectFullDetail.cshtml
@@ -1,7 +1,67 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "ProjectFullDetail";
 }
 
-<h1>ProjectFullDetail</h1>
+<div class="text-center">
+    <h1>CCTV @ViewBag.ProjectName Projesi Detayları</h1>
+</div>
+<div class="container mt-lg-5">
+    <table class="table table-striped table-hover text-center table-bordered results" id="dataTable" style=" vertical-align:middle">
+        <thead>
+            <tr class="table-light">
+                <th>Faz Durumu</th>
+                <th>İlçe Adı</th>
+                <th>Birim Adı</th>
+                <th>Mevcut Sistem</th>
+                <th>Planlanan Proje Türü</th>
+                <th>Durumu</th>
+            </tr>
 
+        </thead>
+        <tbody>
+            @if (ViewBag.Detail != null)
+            {
+                @foreach (var item in ViewBag.Detail)
+                {
+                    <tr>
+                        <td>@item.ProjectName </td>
+                        <td>@item.ProjectDistrict</td>
+                        <td>@item.Unit</td>
+                        <td>@item.ExProjectName</td>
+                        <td>@item.ProjectReason</td>
+                        <td>@item.Status
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
+
+    <table class="table table-striped table-hover text-center table-bordered results" id="dataTable" style=" vertical-align:middle">
+        <thead>
+            <tr class="table-light">
+                <th>Sonlandığı Sistem Odası</th>
+                <th>Malzeme Adı</th>
+                <th>Model</th>
+                <th>Planlandığı Kat</th>
+                <th>Planlandığı Yer</th>
+                <th>Planlanan Adet</th>
+            </tr>
+        </thead>
+        <tbody>
+            @if (ViewBag.Products != null)
+            {
+                @foreach (var item in ViewBag.Products)
+                {
+                    <tr>
+                        <td>@item.FloorOfSystem</td>
+                        <td>@item.ProductName</td>
+                        <td>@item.ProductModel</td>
+                        <td>@item.FloorOfProduct</td>
+                        <td>@item.PlannedPlace</td>
+                        <td>@item.ProductPieces</td>
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
+</div>
