--- a/KgysProjectIdentity.Web/Views/Cctv/Ek1.cshtml
+++ b/KgysProjectIdentity.Web/Views/Cctv/Ek1.cshtml
@@ -1,6 +1,310 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Ek1";
+    int i = 0;
 }
+@model CctvEk1Model
+<style>
+    th {
+        font-size: 18px
+    }
+</style>
+<div class="container">
+    <table class="table table-bordered" style="border:2px;border-color:black">
+        <thead>
+            <tr>
+                <th colspan=6>Ek-1</th>
+            </tr>
+            <tr>
+                <th colspan=6>İZMİR @ViewBag.ProjectName ÇEVRE GÜVENLİK KAMERA SİSTEMİ TEKNİK ŞARTNAMESİ</th>
+            </tr>
+            <tr>
+                <th>Sıra No</th>
+                <th>Şartname Madde No</th>
+                <th>Donanım/Cihaz</th>
+                <th>Birimi</th>
+                <th>Miktar</th>
+                <th>Yeni Değer</th>
+            </tr>
+        </thead>
+        <tbody>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.2.1</th>
+                <td>
+                    KAMERA KONTROL/GÖRÜNTÜLEME VE YÖNETİM SİSTEMİ YAZILIMI
+                </td>
+                <td>SET</td>
+                <td>@Model.KameraYazilim</td>
+                <td><input type="number" class="form-control" asp-for="KameraYazilim"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.2.2</th>
+                <td>
+                    AĞ GÖRÜNTÜ KAYIT CİHAZI (NVR) TİP-1
+                </td>
+                <td>SET</td>
+                <td>@Model.NvrTip1</td>
+                <td><input type="number" class="form-control" asp-for="NvrTip1"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.2.3</th>
+                <td>
+                    AĞ GÖRÜNTÜ KAYIT CİHAZI (NVR) TİP-2
+                </td>
+                <td>SET</td>
+                <td>@Model.NvrTip2</td>
+                <td><input type="number" class="form-control" asp-for="NvrTip2"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.2.4</th>
+                <td>
+                    İÇ ORTAM SABİT DOME KAMERA TİP-1
+                </td>
+                <td>ADET</td>
+                <td>@Model.DomeTip1</td>
+                <td><input type="number" class="form-control" asp-for="DomeTip1"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.2.5</th>
+                <td>
+                    İÇ ORTAM SABİT DOME KAMERA (İFADE ALMA ODASI) TİP-2
+                </td>
+                <td>ADET</td>
+                <td>@Model.DomeTip2</td>
+                <td><input type="number" class="form-control" asp-for="DomeTip2"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.2.5.28</th>
+                <td>
+                    İFADE ALMA ODASI MİKROFONU
+                </td>
+                <td>ADET</td>
+                <td>@Model.Mic</td>
+                <td><input type="number" class="form-control" asp-for="Mic"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.2.6</th>
+                <td>
+                    DIŞ ORTAM SABİT BULLET TİPİ KAMERA
+                </td>
+                <td>ADET</td>
+                <td>@Model.DisBullet</td>
+                <td><input type="number" class="form-control" asp-for="DisBullet"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.2.7</th>
+                <td>
+                    HAREKETLİ (PTZ) KAMERA
+                </td>
+                <td>ADET</td>
+                <td>@Model.PtzKamera</td>
+                <td><input type="number" class="form-control" asp-for="PtzKamera"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.2.8</th>
+                <td>
+                    KAMERA KONTROL ÜNİTESİ
+                </td>
+                <td>ADET</td>
+                <td>@Model.KameraKontrol</td>
+                <td><input type="number" class="form-control" asp-for="KameraKontrol"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.3</th>
+                <td>
+                    SAHA AĞ ANAHTARI
+                </td>
+                <td>ADET</td>
+                <td>@Model.SahaSwitch</td>
+                <td><input type="number" class="form-control" asp-for="SahaSwitch"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.4</th>
+                <td>
+                    İÇ ORTAM AĞ ANAHTARI
+                </td>
+                <td>ADET</td>
+                <td>@Model.IcSwitch</td>
+                <td><input type="number" class="form-control" asp-for="IcSwitch"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.5</th>
+                <td>
+                    OPERATÖR BİLGİSAYARI ( İZLEME VE YÖNETİM MERKEZİ İÇİN ) TİP-1
+                </td>
+                <td>ADET</td>
+                <td>@Model.PcTip1</td>
+                <td><input type="number" class="form-control" asp-for="PcTip1"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.6</th>
+                <td>
+                    OPERATÖR BİLGİSAYARI ( İZLEME NOKTASI İÇİN ) TİP-2
+                </td>
+                <td>ADET</td>
+                <td>@Model.PcTip2</td>
+                <td><input type="number" class="form-control" asp-for="PcTip2"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.7</th>
+                <td>
+                    OPERATÖR BİLGİSAYARI MONİTÖRÜ
 
+                </td>
+                <td>ADET</td>
+                <td>@Model.Monitor</td>
+                <td><input type="number" class="form-control" asp-for="Monitor"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.8</th>
+                <td>
+                    ÇERÇEVESİZ DUVAR EKRAN
+                </td>
+                <td>ADET</td>
+                <td>@Model.LedTv</td>
+                <td><input type="number" class="form-control" asp-for="LedTv"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.9</th>
+                <td>
+                    DUVAR TİPİ RACK KABİN
+                </td>
+                <td>ADET</td>
+                <td>@Model.DuvarKabin</td>
+                <td><input type="number" class="form-control" asp-for="DuvarKabin"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.10</th>
+                <td>
+                    RACK KABİN
+                </td>
+                <td>ADET</td>
+                <td>@Model.RackKabin</td>
+                <td><input type="number" class="form-control" asp-for="RackKabin"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.11</th>
+                <td>
+                    SAHA DOLABI
+                </td>
+                <td>ADET</td>
+                <td>@Model.SahaKabin</td>
+                <td><input type="number" class="form-control" asp-for="SahaKabin"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.12.1</th>
+                <td>
+                    1 kVA KESİNTİSİZ GÜÇ KAYNAĞI (KGK)
+                </td>
+                <td>ADET</td>
+                <td>@Model.KGK</td>
+                <td><input type="number" class="form-control" asp-for="KGK"></td>
+            </tr>
+            @{
+                i++;
+            }
+            <tr>
+                <th scope="row">@i</th>
+                <th>3.13.2</th>
+                <td style="margin:0;padding:0">
+                    <table style="width:100%; max-width:100%;height:100%;max-height:100%">
+                        <tr>
+                            <td rowspan=2 style="border-right:2px;border-right-color:black">
+                                CAT 6 UTP KABLO
+                            </td>
+                            <td>İç Ortam</td>
+                        </tr>
+                        <tr>
 
+                            <td>Dış Ortam</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>ADET</td>
+                <td style="margin:0;padding:0">
+                    <table class="table table-bordered" style="width:100%; max-width:100%;height:100%;max-height:100%">
+                        <tr style="border-bottom:2px;border-bottom-color:black"><td>@Model.Cat6Ic</td></tr>
+                        <tr><td>@Model.Caat6Dis</td></tr>
+                    </table>
+                </td>
+
+                <td><input type="number" class="form-control" asp-for="KGK"></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
