--- a/KgysProjectIdentity.Web/Views/Cctv/Products.cshtml
+++ b/KgysProjectIdentity.Web/Views/Cctv/Products.cshtml
@@ -59,12 +59,29 @@
                     <input type="text" class="form-control" asp-for="FloorOfSystem">
                     <span class="text-danger" asp-validation-for="FloorOfSystem"></span>
                 </td>
-                <td>
-                    <input type="text" class="form-control" asp-for="ProductName">
+                <td style="max-width:550px">
+                    <div style="display:flex">
+                        <div style="width:88%;margin-right:1%;">
+                            <select class="form-select" asp-for="ProductName" asp-items="@ViewBag.ProductsOfCctv" id="Product">
+                                <option></option>
+                            </select>
+                        </div>
+                        <div style="width:10%;min-width:34px;">
+                            <a data-bs-toggle="modal" data-bs-target="#staticBackdropp" data-bs-id="@ViewBag.DetailId" class="btn btn-outline-success d-md-block text-center">+</a>
+                        </div>
+                    </div>
                     <span class="text-danger" asp-validation-for="ProductName"></span>
                 </td>
-                <td>
-                    <input type="text" class="form-control" asp-for="ProductModel">
+                <td style="min-width:300px">
+                    <div style="display:flex">
+                        <div style="width:87%;margin-right:1%;">
+                            <select class="form-select" asp-for="ProductModel" asp-items="@Enumerable.Empty<SelectListItem>()" id="ModelsOfProducts">
+                            </select>
+                        </div>
+                        <div style="width:10%;min-width:34px;">
+                            <a data-bs-toggle="modal" data-bs-target="#staticBackdroppp" class="btn btn-outline-success d-md-block text-center" data-bs-id="@ViewBag.DetailId">+</a>
+                        </div>
+                    </div>
                     <span class="text-danger" asp-validation-for="ProductModel"></span>
                 </td>
                 <td>
@@ -132,8 +149,99 @@
         </div>
     </div>
 </div>
+@*Modal malzeme ekle*@
+<div class="modal fade" id="staticBackdropp" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5">Malzeme Ekleme</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Malzeme Adını Giriniz
+                <form asp-area="" asp-controller="Cctv" asp-action="ProductOfCctvAdd" method="post">
+                    <input type="hidden" class="form-control" asp-for="Id" id="recipient-name">
+                    <input type="text" class="form-control" asp-for="ProductName" required>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Vazgeçtim</button>
+                        <button type="submit" class="btn btn-primary d-md-block">Ekle</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+@*Modal model ekle*@
+<div class="modal fade" id="staticBackdroppp" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5">Model</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Eklemek İstediğiniz Modeli Giriniz
+                <form asp-area="" asp-controller="Cctv" asp-action="ModelsForCctvAdd" method="post">
+                    <div class="mb-2">
+                        <input type="hidden" class="form-control" asp-for="Id" id="recipient-name">
+                        <select class="form-select" asp-for="ProductName" asp-items="@ViewBag.ProductsOfCctv" required>
+                            <option></option>
+                        </select>
+                    </div>
+                    <div class="mb-2">
+                        <input type="text" class="form-control" asp-for="ProductModel" required>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Vazgeçtim</button>
+                        <button type="submit" class="btn btn-primary d-md-block">Ekle</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+@*Malzeme seçince model gelmesi için konuldu*@
+<script type="text/javascript">
+    $(document).ready(function () {
+
+        $('#Product').change(function () {
+
+            var productName = $(this).val();
+
+            if (productName != null && productName != '') {
+                $.ajax({
+                    type: "post",
+                    url: '@Url.Action("GetProducts", "Cctv")',
+                    data: { productName: productName },
+                    success: function (getModels) {
+                        $('#ModelsOfProducts').empty();
+                        $.each(getModels, function (index, models) {
+                            $('#ModelsOfProducts').append($('<option/>', {
+                                value: models.productsModel,
+                                text: models.productsModel
+                            }));
+                        });
+                    },
+                    error: function () {
+                        /*Bu metod ile Ajax işlemi başarısız
+                        olursa eğer hata mesajı verebiliyoruz.*/
+                        alert("Hata");
+                    },
+                    beforeSend: function () {
+                        /*Burada ise Form Post edilmeden önce
+                        işlemler yapılabilir.Örnek olarak Loading, yükleniyor vs..*/
+                    },
+                    complete: function () {
+                        /*Burada ise Form Post edildikten sonra
+                        işlemler yapılabilir.Örnek olarak yükleme tamamlandı vs..*/
+                    }
+                });
+            }
+        });
+    });
+</script>
 @section Scripts
-{
+    {
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/lib/jquery-validation/dist/messages_tr.js"></script>
