--- a/KgysProjectIdentity.Web/Views/Cctv/Ek1.cshtml
+++ b/KgysProjectIdentity.Web/Views/Cctv/Ek1.cshtml
@@ -611,7 +611,7 @@
                 <th></th>
                 <th></th>
                 <td></td>
-                <td></td>
+                <td>exce</td>
                 <td></td>
                 <td style="display: flex;justify-content: center;align-items: center;">
                     <button type="submit" class="btn btn-outline-primary d-md-block">GÜNCELLE</button>
