--- a/KgysProjectIdentity.Web/Views/Cctv/Ek1.cshtml
+++ b/KgysProjectIdentity.Web/Views/Cctv/Ek1.cshtml
@@ -609,7 +609,7 @@
             </tr>
             <tr>
                 <th></th>
-                <th><a class="btn btn-outline-secondary" asp-controller="Cctv" asp-action="CreateExcelEk1" asp-route-id="@ViewBag.DetailId">Excel'e Aktar</a></th>
+                <th><a class="btn btn-outline-secondary" asp-controller="Cctv" asp-action="ExcelEk1" asp-route-id="@ViewBag.DetailId">Excel'e Aktar</a></th>
                 <td></td>
                 <td></td>
                 <td></td>
