--- a/KgysProjectIdentity.Web/Views/Cctv/ViewPicture.cshtml
+++ b/KgysProjectIdentity.Web/Views/Cctv/ViewPicture.cshtml
@@ -1,9 +1,8 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "ViewPicture";
 }
 
-@model List<ProjectEightyImagedModel>
+@model List<CctvProjectPictureModel>
 
 <style>
     .foto {
@@ -61,7 +60,7 @@
 </style>
 <div class="container">
     <div class="jumbotron">
-        <h1 class="fw-light text-center text-lg-start mt-4 mb-0">@ViewBag.ProjectName Projesine Ait Resimler</h1>
+        <h1 class="fw-light text-center text-lg-start mt-4 mb-0">@ViewBag.ProjectName "@ViewBag.Name" Noktasına Ait Resimler</h1>
     </div>
     <hr class="mt-2 mb-5">
 
@@ -69,22 +68,14 @@
 
         @foreach (var item in Model)
         {
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-2">
 
-            @if (item.ProjectId == ViewBag.Id)
-            {
-                <div class="col-sm-6 col-md-4 col-lg-3 mt-2">
+                <a role="button" asp-controller="ProjectEightyImagedModels" asp-action="delete" asp-route-id="@item.Id">Sil</a>
+                <a href="~/uploads/@item.PictureUrl" class="d-block h-100">
+                    <img src="~/uploads/@item.PictureUrl" class="foto hover-shadow">
+                </a>
 
-                    <a role="button" asp-controller="ProjectEightyImagedModels" asp-action="delete" asp-route-id="@item.Id">Sil</a>
-                    <a href="~/uploads/@item.PictureUrl" class="d-block h-100">
-                        <img src="~/uploads/@item.PictureUrl" class="foto hover-shadow">
-                    </a>
-
-                </div>
-
-
-
-            }
-
+            </div>
         }
 
     </div>
