--- a/KgysProjectIdentity.Web/Views/Cctv/ViewPicture.cshtml
+++ b/KgysProjectIdentity.Web/Views/Cctv/ViewPicture.cshtml
@@ -60,8 +60,8 @@
 </style>
 <div class="container">
 
-    <div class="jumbotron">
-        <h1 class="fw-light text-center text-lg-start mt-4 mb-0">@ViewBag.ProjectName "@ViewBag.Name" Noktasına Ait Resimler</h1>
+    <div class="text-center">
+        <h1 class="fw-light text-center text-lg mt-4 mb-0">@ViewBag.ProjectName Projesine Ait Resimler</h1>
     </div>
     <div class="col-md-4 offset-md-4 text-center">
         @if (TempData["Status"] != null)
